# programa-forrajeria

./: .gitignore  LICENSE.txt  README.md  app.py  classes.py  functionutils.py  gestion-forraje.spec  inventario.db  main.py  mainwindow.ui  pyproject.toml  pysidedeploy.spec  requirements.txt  saleDialog.ui  todo.txt  ui_mainwindow.py
database/: inventario.db
output/gestion forraje/_internal/resources/: rc_icons.qrc
output/gestion forraje/_internal/ui/: ui_productDialog.py  ui_saleDialog.py
output/gestion-forraje/_internal/ui/: ui_mainwindow.py
output/gestion-forraje/_internal/utils/: classes.py  functionutils.py
resources/: rc_icons.py  rc_icons.qrc
tests/: test_categories.txt  test_inventory.py  test_products.txt
ui/: categoriesDescEditDialog.ui  customCalendars.py  debtorDataDialog.ui  debtsTable_debtorDetails.ui  debts_balanceProductsList.ui  debts_dueproducts.ui  listproduct.ui  mainwindow.ui  palette.scss  productDialog.ui  saleDialog.ui  ui_categoriesDescEditDialog.py  ui_debtorDataDialog.py  ui_debts_balanceProductsList.py  ui_listproduct.py  ui_mainwindow.py  ui_productDialog.py  ui_saleDialog.py  ui_warnAccountHasBalanceDialog.py  warnAccountHasBalanceDialog.ui
utils/: classes.py  customvalidators.py  dbcopies.py  dboperations.py  delegates.py  enumclasses.py  eventfilters.py  functionutils.py  log_analyzer.py  messageboxes.py  model_classes.py  productbalancedelegate.py  proxy_models.py  settings_manager.py  workerclasses.py
