[project]
name = "forrajeria-programa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.3"
dependencies = [
    "numpy==2.1.1",
    "phonenumbers==8.13.35",
    "platformdirs==4.3.8",
    "pyside6==6.7.2",
    "pyside6-addons==6.7.2",
    "pyside6-essentials==6.7.2",
    "shiboken6==6.7.2",
]
